# SMAUG-T_public

./: .clang-format  .gitignore  LICENSE  README.md
.github/workflows/: pr.yml  unittest.yml
KAT/: PQCkemKAT_1312.rsp  PQCkemKAT_1324.rsp  PQCkemKAT_1728.rsp  PQCkemKAT_176.rsp  PQCkemKAT_2010.rsp  PQCkemKAT_2144.rsp  PQCkemKAT_218.rsp  PQCkemKAT_236.rsp  PQCkemKAT_832.rsp  PQCkemKAT_848.rsp
KAT/additional_implemenation/TiMER/: PQCkemKAT_136.rsp  PQCkemKAT_808.rsp  PQCkemKAT_832.rsp
KAT/additional_implementation/: PQCkemKAT_136.rsp
KAT/optimized_implementation/90s/: PQCkemKAT_1312.rsp  PQCkemKAT_1728.rsp  PQCkemKAT_832.rsp
KAT/smaug128/: PQCkemKAT_174.rsp
KAT/smaug192/: PQCkemKAT_185.rsp
KAT/smaug256/: PQCkemKAT_182.rsp
additional_implementation/: CMakeLists.txt  Makefile
additional_implementation/SCA-countermeasure/: CMakeLists.txt
additional_implementation/SCA-countermeasure/benchmark/: speed.c
additional_implementation/SCA-countermeasure/include/: api.h  ciphertext.h  hwt.h
additional_implementation/SCA-countermeasure/kat/: CMakeLists.txt  kat_encrypt.c  kat_kem.c
additional_implementation/SCA-countermeasure/src/: ciphertext.c  dg.c  hwt.c  indcpa.c  pack.c  poly.c
additional_implementation/SCA-countermeasure/test/: UnitTest.cpp
additional_implementation/TiMER_SCA-countermeasure/: Makefile
additional_implementation/TiMER_optimized_implemenation/: CMakeLists.txt  Makefile
additional_implementation/TiMER_optimized_implementation/kem/: CMakeLists.txt  Makefile
additional_implementation/TiMER_optimized_implementation/kem-90s/test/: CMakeLists.txt  UnitTest.cpp
additional_implementation/TiMER_optimized_implementation/kem/benchmark/: CMakeLists.txt  cpucycles.c  speed_print.c  speed_print.h
additional_implementation/TiMER_optimized_implementation/kem/include/: dg.h  hwt.h  kem.h  parameters.h
additional_implementation/TiMER_optimized_implementation/kem/kat/: CMakeLists.txt  PQCgenKAT_kem.c  kat_kem.c
additional_implementation/TiMER_optimized_implementation/kem/src/: dg.c  indcpa.c  kem.c  key.c
additional_implementation/TiMER_optimized_implementation/kem/test/: CMakeLists.txt
additional_implementation/TiMER_reference_implementation/: CMakeLists.txt  Makefile
additional_implementation/TiMER_reference_implementation/benchmark/: CMakeLists.txt
additional_implementation/TiMER_reference_implementation/helper-scripts/: Meet_LWE.py  __init__.py  conf.py  lwe_bkw.py  lwe_dual.py  lwe_parameters.py  schemes.py  simulator.py  smaug_dfp_compression.py
additional_implementation/TiMER_reference_implementation/include/: api.h  dg.h  hwt.h  indcpa.h  kem.h  key.h  parameters.h  poly.h  verify.h
additional_implementation/TiMER_reference_implementation/kat/: CMakeLists.txt
additional_implementation/TiMER_reference_implementation/src/: cbd.c  dg.c  hwt.c  indcpa.c  io.c  kem.c  poly.c  rng.c
additional_implementation/TiMER_reference_implementation/test/: CMakeLists.txt  UnitTest.cpp  main.c
additional_implementation/helper-scripts/: Smaug_estimator_final.py  lwe_primal.py  nd.py  prob.py  reduction.py  smaug_dfp.py  smaug_dfp_compression.py
additional_implementation/include/: hwt.h  pack.h  parameters.h  poly.h
additional_implementation/side-channel-countermeasure/: CMakeLists.txt  Makefile
additional_implementation/src/: ciphertext.c  dg.c  hwt.c  indcpa.c  pack.c  poly.c
helper-scripts/: README.md  Smaug_estimator_final.py  Smaug_failure_timer.py  distList.py  gb.py  lwe.py  lwe_guess.py  nd.py  proba_util.py  smaug_dfp_compression.py
optimized_implementation/: CMakeLists.txt  Makefile  cmake
optimized_implementation/benchmark/: CMakeLists.txt  PQC_bench.c  cpucycles.c  cpucycles.h  speed.c  speed_print.c  speed_print.h
optimized_implementation/include/: align.h  dg.h  fips202avx.h  hash.h  hwt.h  indcpa.h  kem.h  key.h  pack.h  poly.h  symmetric.h
optimized_implementation/kat/: CMakeLists.txt  PQCgenKAT_kem.c  kat_api.h  kat_encrypt.c  kat_kem.c
optimized_implementation/kem/: CMakeLists.txt  Makefile  PQCkemKAT_1312.rsp  PQCkemKAT_1728.rsp  PQCkemKAT_832.rsp  cmake
optimized_implementation/kem-90s/: CMakeLists.txt  Makefile
optimized_implementation/kem-90s/benchmark/: CMakeLists.txt  speed_print.h
optimized_implementation/kem-90s/include/: aes256ctr.h  align.h  api.h  dg.h  hwt.h  indcpa.h  kem.h  key.h  parameters.h  poly.h  randombytes.h  sha2.h  symmetric.h
optimized_implementation/kem-90s/include/mul/: ntt.h
optimized_implementation/kem-90s/kat/: CMakeLists.txt  PQCgenKAT_kem.c  kat_api.h  kat_kem.c
optimized_implementation/kem-90s/src/: ciphertext.c  dg.c  hwt.c  indcpa.c  kem.c  key.c  poly.c  symmetric.c
optimized_implementation/kem-90s/test/: CMakeLists.txt  UnitTest.cpp  main.c
optimized_implementation/kem/include/: api.h  (+5 more)
optimized_implementation/src/: dg.c  fips202avx.c  hash.c  hwt.c  indcpa.c  key.c  pack.c
optimized_implementation/test/: CMakeLists.txt  UnitTest.cpp  main.c
reference_implementation/: CMakeLists.txt  CMakePresets.json  Makefile
reference_implementation/benchmark/: PQC_bench.c  speed.c
reference_implementation/include/: api.h  bandwidth.py  cbd.h  ciphertext.h  dg.h  hash.h  hwt.h  indcpa.h  io.h  kem.h  key.h  pack.h  parameters.h  poly.h  rng.h  verify.h
reference_implementation/kat/: CMakeLists.txt  PQCgenKAT_kem.c  api.h  kat_encrypt.c  kat_kem.c
reference_implementation/kat_results/KAT_v1.0/: PQCkemKAT_176.rsp  PQCkemKAT_236.rsp
reference_implementation/kat_results/KAT_v1.1.0/: PQCkemKAT_218.rsp
reference_implementation/kat_results/KAT_v2.0/: PQCkemKAT_176.rsp  PQCkemKAT_236.rsp
reference_implementation/kat_results/KAT_v2.0.2/: PQCkemKAT_236.rsp
reference_implementation/src/: cbd.c  ciphertext.c  dg.c  hwt.c  indcpa.c  io.c  kem.c  key.c  pack.c  poly.c
reference_implementation/test/: CMakeLists.txt  UnitTest.cpp  a.out  main.c  sx_cnt_analysis.c
smaug_security_fail_prob_estimator/: Lizard.py  README (lattice-estimator).md  README.md  RLizard.py  RLizardv2.py  Smaug_estimator_final.py  __init__.py  distList.py  inputs.xlsx  main.py  smaug.py  util.py
(+85 files in other folders)
